# Automode

GSM8K_9B_Results/: dynamic_log_30f5678450.json  dynamic_log_37d3f75d56.json  dynamic_log_424b833b53.json  dynamic_log_483126a981.json  dynamic_log_60071ead3e.json  dynamic_log_60d2c40bfd.json  dynamic_log_975170add3.json  dynamic_log_9a82476289.json  dynamic_log_a216ac7d4b.json  dynamic_log_a2420c9a3c.json  dynamic_log_b1ae94b1da.json  dynamic_log_b331aad733.json  dynamic_log_bb98ee68bc.json  dynamic_log_bd87e59e5c.json  dynamic_log_d5187282ce.json  dynamic_log_d9314e3ae2.json  dynamic_log_dcd30f6fb0.json  dynamic_log_dec1f36be0.json  eval_0.603_20260403-034022.json  eval_0.618_20260403-055849.json  eval_0.625_20260403-081657.json  eval_0.719_20260402-134103.json  eval_0.723_20260401-135049.json  eval_0.723_20260401-172848.json  eval_0.723_20260403-045019.json  eval_0.723_20260403-092704.json  eval_0.728_20260331-185446.json  eval_0.730_20260402-232103.json  eval_0.731_20260402-082440.json  eval_0.732_20260401-090227.json  eval_0.733_20260401-101617.json  eval_0.735_20260331-182707.json  eval_0.735_20260402-105628.json  eval_0.738_20260402-121238.json  eval_0.738_20260403-070848.json  (+78 more)
automode_pkg/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
automode_pkg/automode/: __init__.py  config.py  core.py  data.py  eval.py  grid.py  models.py  train.py
automode_pkg/notebooks/: driver_gpu0_pro6000.ipynb  driver_gpu1_5090.ipynb  driver_gpu2_5070.ipynb  figures.ipynb  tier2_forgetting_evals.ipynb
automode_pkg/tests/: test_switching.py  test_training_invariants.py
(+8 files in other folders)
